@@ -3,6 +3,7 @@ libmpdclient 2.20 (not yet released)
 libmpdclient 2.19 (2020/07/03)
 * fix off-by-one bug in MPD_HOST parser
 * add function mpd_lookup_replay_gain_mode()
+* playlist: add function mpd_run_playlist_move()
 * identify messages with length over the buffer limit
 * support MPD protocol 0.16
  - replay gain
